# RTFM-interactive

./: .env  .gitignore  README.md  app.py  html2md.py  localfiles2md.py  pyproject.toml  quiz.py
rtfm_interactive.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
